--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "codeur",
-    "version": "0.0.0",
-    "url": "https://github.com/owner/project/issues",
-    "email": "mounirdarssi@gmail.com"
+  "email": "mounirdarssi@gmail.com",
+  "name": "codeur",
+  "url": "https://github.com/owner/project/issues",
+  "version": "0.0.4"
 }
